# sbp

./: .gitignore  CMakeLists.txt  Makefile  requirements.txt  run_test  setup.py
bindings/: sbp.cpp
include/: SBPLayer.h  SBPNetwork.h  SBPNeuron.h
net/: Q2.txt  backpropagation.m  backpropagation2.m  backpropagation3.m  dsigm.m  dsigm_uni.m  feedforward.m  feedforward2.m  getX.m  getlabels.m  init.m  loadT.m  net.tmp  pick.m  pl_small_net.m  prepare_nets.m  sigm.m  sigm_uni.m  small_net.m  test_beta.m  train.m  xor.m
net/nets-v1/: cos_net.txt  digit_net.txt  lod_net.txt  mu.txt  pl_capital_net.txt  transcript  trmx.txt
net/set/: mu.txt  pcaTransform.m  pics.m  prepTransform.m  readSets.m  readmnist.m  test-labels.idx1-ubytes  train-labels.idx1-ubytes  trmx.txt
pysbp/: __init__.py  classifier.py  decoder.py  loader.py
python/: CMakeLists.txt  Makefile  pysbp.cpp  setup.py  setup.py.in  utils.cpp  utils.h
src/: SBPLayer.cpp  SBPNetwork.cpp  SBPNeuron.cpp
tests/: pysbp_test.py  xor.cpp
